--- a/src/main/webapp/index/community/download/karaf-2.3.0-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.3.0-release.page
@@ -27,6 +27,7 @@ h3. Bug
  * [KARAF-1066|https://issues.apache.org/jira/browse/KARAF-1066] - make features xml parser more forgiving
  * [KARAF-1162|https://issues.apache.org/jira/browse/KARAF-1162] - A command that can not be loaded breaks the whole completion
  * [KARAF-1202|https://issues.apache.org/jira/browse/KARAF-1202] - log:tail spins with debug on
+ * [KARAF-1226|https://issues.apache.org/jira/browse/KARAF-1226] - Karaf Client cannot run a script
  * [KARAF-1293|https://issues.apache.org/jira/browse/KARAF-1293] - feature level start-level not completely finished....
  * [KARAF-1305|https://issues.apache.org/jira/browse/KARAF-1305] - Error with Basic HTTP Authentication when using karaf realm
  * [KARAF-1343|https://issues.apache.org/jira/browse/KARAF-1343] - Features repo points to the old pax-wicket app
@@ -76,11 +77,16 @@ h3. Bug
  * [KARAF-1751|https://issues.apache.org/jira/browse/KARAF-1751] - Spring feature dependencies specified too tightly
  * [KARAF-1754|https://issues.apache.org/jira/browse/KARAF-1754] - updating features.xml in auto deploy folder results in duplication
  * [KARAF-1756|https://issues.apache.org/jira/browse/KARAF-1756] - No SSH connection possible on Debian 6.0.5
+ * [KARAF-1759|https://issues.apache.org/jira/browse/KARAF-1759] - No Way To Start obr Dependencies By Default
  * [KARAF-1763|https://issues.apache.org/jira/browse/KARAF-1763] - shutdown command doesn't work correctly
+ * [KARAF-1765|https://issues.apache.org/jira/browse/KARAF-1765] - The obr Shell Deploy And Start Commands Always Deploy Optional Dependencies
  * [KARAF-1766|https://issues.apache.org/jira/browse/KARAF-1766] - Web Console Missing Metatype Import
  * [KARAF-1791|https://issues.apache.org/jira/browse/KARAF-1791] - Add minimal distribution
+ * [KARAF-1796|https://issues.apache.org/jira/browse/KARAF-1796] - Feature Install Sequence Should Be Install/Install/Install...Start/Start/Start
  * [KARAF-1797|https://issues.apache.org/jira/browse/KARAF-1797] - NPE thrown from OsgiConfiguration.unregister
  * [KARAF-1809|https://issues.apache.org/jira/browse/KARAF-1809] - Feature spring-web-portlet can't be installed
+ * [KARAF-1814|https://issues.apache.org/jira/browse/KARAF-1814] - Cursor keys do not work when using bin/client on windows
+ * [KARAF-1815|https://issues.apache.org/jira/browse/KARAF-1815] - When ssh'ing from a windows box into a unix box, arrow keys are not correctly interpreted
  * [KARAF-1821|https://issues.apache.org/jira/browse/KARAF-1821] - Some etc files are executable whereas it should not be
  * [KARAF-1822|https://issues.apache.org/jira/browse/KARAF-1822] - BundlesMBean should use bundles attribute instead of list() operation
  * [KARAF-1824|https://issues.apache.org/jira/browse/KARAF-1824] - tooling-exam contains reference to wrong commons-io artifact
@@ -94,9 +100,15 @@ h3. Bug
  * [KARAF-1840|https://issues.apache.org/jira/browse/KARAF-1840] - should also endorse saaj-api
  * [KARAF-1845|https://issues.apache.org/jira/browse/KARAF-1845] - Minimal distribution doesn't start
  * [KARAF-1852|https://issues.apache.org/jira/browse/KARAF-1852] - Osgi packages are exported with wrong versions
+ * [KARAF-1853|https://issues.apache.org/jira/browse/KARAF-1853] - Attached kar deploys to a different snapshot build number than the main artifact
  * [KARAF-1858|https://issues.apache.org/jira/browse/KARAF-1858] - itests look stuck (use 100% CPU)
  * [KARAF-1882|https://issues.apache.org/jira/browse/KARAF-1882] - Provide Level attribute in the LogMBean
  * [KARAF-1888|https://issues.apache.org/jira/browse/KARAF-1888] - Remove aliases by default
+ * [KARAF-1905|https://issues.apache.org/jira/browse/KARAF-1905] - ASM4 causes the Proxy/Weaving of Xerces, but that then causes validation factories to fail.
+ * [KARAF-1906|https://issues.apache.org/jira/browse/KARAF-1906] - Compile error using IBM JDK on JAAS module.
+ * [KARAF-1907|https://issues.apache.org/jira/browse/KARAF-1907] - Compile error: type ServiceReference does not take parameters on OSGi Shell ListBundleServices using JDK 7
+ * [KARAF-1909|https://issues.apache.org/jira/browse/KARAF-1909] - Compile error using IBM JDK on management mbeans SystemMBeanImpl
+ * [KARAF-1911|https://issues.apache.org/jira/browse/KARAF-1911] - Wrong version of camel-example-osgi in Getting Started/Quickstart Guide - 2.7.0 doesn't work
 
 h3. Dependency upgrade
  * [KARAF-681|https://issues.apache.org/jira/browse/KARAF-681] - Upgrade to Pax URL 1.3.4 (noted here for historical purposes)
@@ -155,12 +167,12 @@ h3. Dependency upgrade
  * [KARAF-1747|https://issues.apache.org/jira/browse/KARAF-1747] - Update to jline 2.8 (noted here for historical purposes)
  * [KARAF-1769|https://issues.apache.org/jira/browse/KARAF-1769] - Upgrade to pax-logging 1.6.10 (noted here for historical purposes)
  * [KARAF-1773|https://issues.apache.org/jira/browse/KARAF-1773] - Upgrade to pax-logging 1.6.10 (duplicate)
- * [KARAF-1781|https://issues.apache.org/jira/browse/KARAF-1781] - Upgrade to Mina 2.0.5
+ * [KARAF-1781|https://issues.apache.org/jira/browse/KARAF-1781] - Upgrade to Mina 2.0.5 (noted here for historical purposes)
  * [KARAF-1787|https://issues.apache.org/jira/browse/KARAF-1787] - Upgrade to commons-fileupload 1.2.2
  * [KARAF-1788|https://issues.apache.org/jira/browse/KARAF-1788] - Upgrade to commons-io 2.4
  * [KARAF-1816|https://issues.apache.org/jira/browse/KARAF-1816] - Upgrade to jline 2.9
  * [KARAF-1817|https://issues.apache.org/jira/browse/KARAF-1817] - Upgrade to sshd 0.8.0
- * [KARAF-1819|https://issues.apache.org/jira/browse/KARAF-1819] - Upgrade to Mina 2.0.5 (duplicate)
+ * [KARAF-1819|https://issues.apache.org/jira/browse/KARAF-1819] - Upgrade to Mina 2.0.5 (duplicate) (noted here for historical purposes)
  * [KARAF-1859|https://issues.apache.org/jira/browse/KARAF-1859] - Upgrade to ServiceMix Specs 2.1
  * [KARAF-1862|https://issues.apache.org/jira/browse/KARAF-1862] - Upgrade to Felix FileInstall 3.2.6
  * [KARAF-1863|https://issues.apache.org/jira/browse/KARAF-1863] - Upgrade to sshd 0.8.0 (duplicate)
@@ -170,6 +182,8 @@ h3. Dependency upgrade
  * [KARAF-1868|https://issues.apache.org/jira/browse/KARAF-1868] - Upgrade aries bundles to 1.0.1 (blueprint-core, jmx-core, transaction-manager, jpa-container-context)
  * [KARAF-1883|https://issues.apache.org/jira/browse/KARAF-1883] - Upgrade to ASM 4.0
  * [KARAF-1890|https://issues.apache.org/jira/browse/KARAF-1890] - Upgrade to Jetty 7.6.7.v20120910
+ * [KARAF-1904|https://issues.apache.org/jira/browse/KARAF-1904] - Upgrade to Mina 2.0.7
+ * [KARAF-1908|https://issues.apache.org/jira/browse/KARAF-1908] - Upgrade to XBean 3.12
 
 ** Improvement
  * [KARAF-447|https://issues.apache.org/jira/browse/KARAF-447] - Add JDBC lock implementation for PostgreSQL
@@ -227,6 +241,7 @@ h3. New Feature
  * [KARAF-1806|https://issues.apache.org/jira/browse/KARAF-1806] - Add version attribute in the SystemMBean
  * [KARAF-1856|https://issues.apache.org/jira/browse/KARAF-1856] - Merge bundle:diag command
  * [KARAF-1857|https://issues.apache.org/jira/browse/KARAF-1857] - Merge bundle:services command
+ * [KARAF-1910|https://issues.apache.org/jira/browse/KARAF-1910] - Provide Spring 3.1.2.RELEASE features
 
 h3. Task
  * [KARAF-1415|https://issues.apache.org/jira/browse/KARAF-1415] - Support Jetty 7.6
@@ -234,3 +249,4 @@ h3. Task
 
 h3. Test
  * [KARAF-1876|https://issues.apache.org/jira/browse/KARAF-1876] - Improve StandardFeaturesTest, EnterpriseFeaturesTest and SpringFeaturesTest using feature service
+ * [KARAF-1912|https://issues.apache.org/jira/browse/KARAF-1912] - Test failures in itest.OsgiTest as aries proxy api is not bundle id 10 anymore
