--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,6 +1,6 @@
 ---
 title: Karaf 2.3.0
-page_version: 17
+page_version: 18
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2012-12-06}
 {include:news-2012-10-15}
 {include:news-2012-09-03}
 {include:news-2012-08-18}
