--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,11 +1,12 @@
 ---
 title: News
-page_version: 6
+page_version: 7
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-12-06}
 {include:news-2012-10-15}
 {include:news-2012-09-03}
 {include:news-2012-08-18}
