--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-12-21}
 {include:news-2012-12-06}
 {include:news-2012-10-15}
 {include:news-2012-09-03}
