--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -16,7 +16,8 @@ h2. Articles on Apache Karaf
 * [Use Camel, CXF, and Karaf to implement batches|http://blog.nanthrax.net/2011/08/use-camel-cxf-and-karaf-to-implement-batches/]
 * [JAX-RS services using CXF and Karaf|http://blog.nanthrax.net/2011/08/jax-rs-services-using-cxf-and-karaf/]
 * [What's new in Apache Karaf 2.2.4 ?|http://blog.nanthrax.net/2011/10/whats-new-in-karaf-2-2-4/]
-* [Adding custom log-appender to Pax Logging|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=201]
+* [Adding custom log-appender to Pax Logging|http://notizblog.nierbeck.de/2011/08/adding-custom-log-appender-to-pax-logging/]
+* [Adding additional ServletContext to Pax Web|http://notizblog.nierbeck.de/2011/05/adding-additional-servletcontext-in-pax-web/]
 * [One Year of Apache Karaf|http://www.infoq.com/news/2011/06/apache-karaf]
 * [Apache Karaf Child Instances, what are they, and why should I use them?|http://icodebythesea.blogspot.com/2011/11/apache-karaf-child-instances-what-are.html]
 
@@ -35,7 +36,7 @@ h2. Tutorials
 * [Karaf Tutorial Part 5 - Running Apache Camel integrations in OSGi|http://www.liquid-reality.de/x/G4Bk]
 * [Karaf Tutorial Part 6 - Database Access|http://www.liquid-reality.de/x/LYBk]
 * [Combining Karaf Features, PAX URL, and Maven to deploy a plain JAR as an OSGi bundle|http://davidvaleri.wordpress.com/2010/08/13/combining-karaf-features-pax-url-and-maven-to-deploy-a-plain-jar-as-an-osgi-bundle/]
-* Blocking system.exit in OSGi on Karaf [part1|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=67] [part2|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=82] [part3|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=94] [part4|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=101]
+* Blocking system.exit in OSGi on Karaf [part1|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi/] [part2|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-ii/] [part3|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-iii/] [part4|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-iv/]
 * [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
 * [Run a Google Web Toolkit 2 project on Apache Karaf/ServiceMix|http://cmoulliard.blogspot.com/2011/12/run-google-web-toolkit-2-project-on.html]
 
