--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -8,6 +8,28 @@ h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
 
+h2. Karaf 4.0.0.M1
+
+[Release Notes|download/karaf-4.0.0.M1-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-4.0.0.M1.zip|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-4.0.0.M1.tar.gz|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M1-apache-karaf-4.0.0.M1.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-4.0.0.M1-src.zip|http://archive.apache.org/dist.cgi/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-4.0.0.M1-src.tar.gz|http://archive.apache.org/dist/closer.cgi/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M1/apache-karaf-4.0.0.M1-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-4.0.0.M1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.html] |
+|PDF Manual| [manual-4.0.0.M1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.pdf] |
+
+
 h2. Karaf 3.0.2
 
 [Release Notes|download/karaf-3.0.2-release.html]
@@ -107,7 +129,7 @@ h3. Source Distribution
 
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-2.4.0-src.zip|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.0-src.tar.gz|http://archive.apache.org/dyn/closer.cgi/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.0-src.tar.gz|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.0/apache-karaf-2.4.0-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -128,7 +150,7 @@ h3. Source Distribution
 
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-2.3.9-src.zip|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.9-src.tar.gz|http://archive.apache.org/dyn/closer.cgi/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.9-src.tar.gz|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -149,7 +171,7 @@ h3. Source Distribution
 
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-2.3.8-src.zip|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.8-src.tar.gz|http://archive.apache.org/dyn/closer.cgi/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.8-src.tar.gz|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.8/apache-karaf-2.3.8-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
