--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-02-13}
 {include:news-2015-02-06}
 {include:news-2015-01-30}
 {include:news-2015-01-23}
