--- a/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.3.x.page
+++ b/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.3.x.page
@@ -120,5 +120,5 @@ Note: Karaf 2.2.9 versions provided for upgrade path considerations.
 | struts | n/a | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 |
 | xbean | 3.11.1 | 3.12 | 3.12 | 3.12 | 3.12 | 3.16 | 3.16 | 3.16 | 3.16 | 3.16 | 3.16 | 3.16 | 3.16 |
 | javax.mail | 1.4.4 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 |
-| weld | n/a | n/a | n/a | n/a | n/a | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final |
-| xerces | n/a | n/a | n/a | n/a | n/a | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 |
+| weld | n/a | n/a | n/a | n/a | n/a | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final |
+| xerces | n/a | n/a | n/a | n/a | n/a | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 |
